--- a/index.html
+++ b/index.html
@@ -331,10 +331,10 @@
     />
     <div class="container">
       <div class="balloon">
-        <div><span>☺</span></div>
-        <div><span>B</span></div>
-        <div><span>D</span></div>
+        <div><span>H</span></div>
         <div><span>A</span></div>
+        <div><span>P</span></div>
+        <div><span>P</span></div>
         <div><span>Y</span></div>
         <div><span>!</span></div>
       </div>
